--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,110 @@
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+alabaster==0.7.10
+astroid==1.6.0
+attrs==17.3.0
+awscli==1.14.30
+Babel==2.5.3
+bleach==1.5.0
+botocore==1.8.34
+certifi==2017.11.5
+chainer==3.2.0
+chardet==3.0.4
+click==6.7
+colorama==0.3.7
+coverage==4.4.2
+cycler==0.10.0
+cymem==1.31.2
+Cython==0.27.3
+cytoolz==0.8.2
+decorator==4.1.2
+dill==0.2.7.1
+docutils==0.14
+en-core-web-sm==2.0.0
+entrypoints==0.2.3
+enum34==1.1.6
+fastrlock==0.3
+filelock==2.0.13
+ftfy==4.4.3
+html5lib==0.9999999
+hypothesis==2.0.0
+idna==2.6
+imagesize==0.7.1
+ipykernel==4.7.0
+ipython==6.2.1
+ipython-genutils==0.2.0
+ipywidgets==7.0.5
+isort==4.2.15
+jedi==0.11.1
+Jinja2==2.10
+jmespath==0.9.3
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.0
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+Keras==2.1.2
+lazy-object-proxy==1.3.1
+Markdown==2.6.10
+MarkupSafe==1.0
+matplotlib==2.1.1
+mccabe==0.6.1
+mistune==0.8.3
+mock==2.0.0
+msgpack-numpy==0.4.1
+msgpack-python==0.4.8
+murmurhash==0.28.0
+nbconvert==5.3.1
+nbformat==4.4.0
+notebook==5.2.2
+numpy==1.13.3
+pandas==0.21.1
+pandocfilters==1.4.2
+parso==0.1.1
+pathlib==1.0.1
+pbr==3.1.1
+pexpect==4.3.1
+pickleshare==0.7.4
+plac==0.9.6
+pluggy==0.6.0
+preshed==1.0.0
+prompt-toolkit==1.0.15
+protobuf==3.5.0.post1
+ptyprocess==0.5.2
+py==1.5.2
+pyasn1==0.4.2
+pycodestyle==2.3.1
+pyflakes==1.6.0
+Pygments==2.2.0
+pyparsing==2.2.0
+python-dateutil==2.6.1
+python-dotenv==0.7.1
+pytz==2017.3
+PyYAML==3.12
+pyzmq==16.0.3
+qtconsole==4.3.1
+regex==2017.4.5
+requests==2.18.4
+rsa==3.4.2
+s3transfer==0.1.12
+scikit-learn==0.19.1
+scipy==1.0.0
+seaborn==0.8.1
+simplegeneric==0.8.1
+six==1.11.0
+snowballstemmer==1.2.1
+spacy==2.0.5
+tensorflow-gpu==1.4.1
+tensorflow-tensorboard==0.4.0rc3
+termcolor==1.1.0
+terminado==0.8.1
+testpath==0.3.1
+thinc==6.10.2
+toolz==0.9.0
+tornado==4.5.2
+tqdm==4.19.5
+traitlets==4.3.2
+ujson==1.35
+urllib3==1.22
+wcwidth==0.1.7
+Werkzeug==0.13
+widgetsnbextension==3.0.8
+wrapt==1.10.11
